--- a/zinal/ci.yml
+++ b/zinal/ci.yml
@@ -13,11 +13,12 @@ deploy_tds:
     - cd zinal
     - CURRENT_IMG="$(nomad job inspect podman-ci-ext-gitlab-runner-job | jq --raw-output .Job.TaskGroups[0].Tasks[0].Config.image)"
     - podman build -f Dockerfile_tds --format docker --build-arg BASEIMG=$CURRENT_IMG -t $DOCKERTAG .
+    - podman login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
     - podman push $DOCKERTAG
     - podman rmi $DOCKERTAG
     - nomad job plan -var image_id=$DOCKERTAG -var GITLAB_RUNNER_TOKEN=$(cat $HOME/zinal/gitlab-runner-config-zinal.token) -var GITLAB_RUNNER_SYSTEM_ID=$(cat $HOME/zinal/gitlab-runner-system_id) nomad_podman_gitlab-runner.hcl | tee nomad_plan.log
     - eval $(grep "nomad job run " nomad_plan.log)
   variables:
-    DOCKERTAG: docker.io/finkandreas/cicd-ext-zinal-gitlab-runner:tds-$CI_COMMIT_SHORT_SHA
+    DOCKERTAG: $CI_REGISTRY_IMAGE/cicd-ext-zinal-gitlab-runner:tds-$CI_COMMIT_SHORT_SHA
     GIT_SUBMODULE_STRATEGY: recursive
 
