--- a/zinal/ci.yml
+++ b/zinal/ci.yml
@@ -16,10 +16,15 @@ deploy_tds:
     - podman login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
     - podman push $DOCKERTAG
     - podman rmi $DOCKERTAG
+    - TOKEN="$(cat $HOME/zinal/gitlab-runner-config-zinal.token)"
+    - RUNNER_ID="$(cat $HOME/zinal/gitlab-runner-system_id)"
+    - [[ -z $TOKEN ]] && echo "Token is empty - this is an error" && exit 1
+    - [[ -z $RUNNEr_ID ]] && echo "Runner id is empty - this is an error" && exit 1
       # nomad job plan returns a non-zero status when there is a change, therefore we must ignore the return value
-    - nomad job plan -var image_id=$DOCKERTAG -var GITLAB_RUNNER_TOKEN=$(cat $HOME/zinal/gitlab-runner-config-zinal.token) -var GITLAB_RUNNER_SYSTEM_ID=$(cat $HOME/zinal/gitlab-runner-system_id) nomad_podman_gitlab-runner.hcl | tee nomad_plan.log || true
+    - nomad job plan -var image_id=$DOCKERTAG -var "GITLAB_RUNNER_TOKEN=$TOKEN" -var "GITLAB_RUNNER_SYSTEM_ID=$RUNNER_ID" nomad_podman_gitlab-runner.hcl | tee nomad_plan.log || true
     - eval $(grep "nomad job run " nomad_plan.log)
   variables:
     DOCKERTAG: $CI_REGISTRY_IMAGE/cicd-ext-zinal-gitlab-runner:tds-$CI_COMMIT_SHORT_SHA
+    HOME: /users/anfink
     GIT_SUBMODULE_STRATEGY: recursive
 
