--- a/zinal/ci.yml
+++ b/zinal/ci.yml
@@ -29,6 +29,10 @@ deploy_tds:
     DOCKERTAG: $CI_REGISTRY_IMAGE/cicd-ext-zinal-gitlab-runner:tds-$CI_COMMIT_SHORT_SHA
     HOME: /users/anfink
     GIT_SUBMODULE_STRATEGY: recursive
+# we allow this job to fail, sometimes we do not exit early enough before nomad switches over
+# to the new gitlab-runner, then this job would fail
+# However we have a test in the test tds stage that checks that the correct image is loaded
+allow_failure: true
 
 
 test tds container-runner:
@@ -48,6 +52,8 @@ test tds slurm-baremetal:
   stage: test_tds
   script:
     - cat /etc/os-release | grep sles
+    - CURRENT_IMG="$(nomad job inspect podman-ci-ext-gitlab-runner-job | jq --raw-output .Job.TaskGroups[0].Tasks[0].Config.image)"
+    - '[[ $CURRENT_IMG != "$CI_REGISTRY_IMAGE/cicd-ext-zinal-gitlab-runner:tds-$CI_COMMIT_SHORT_SHA" ]] && echo "CURRENT_IMG=$CURRENT_IMG is the wrong image running the gitlab runner" && exit 1'
   variables:
     CSCS_RUN_TDS: 'YES'
 
