revert to old version, copy defaults.sh for each mode-runner

--- a/zinal/Dockerfile
+++ b/zinal/Dockerfile
@@ -15,8 +15,10 @@ RUN curl -L "https://gitlab-runner-downloads.s3.amazonaws.com/latest/binaries/gi
   && chmod +x /usr/local/bin/gitlab-runner
 
 # copy the runners into the container
-COPY sarus /usr/local/bin/sarus
+COPY sarus-fake /usr/local/bin/sarus
 COPY gitlab-runner-multimode /home/someuser/gitlab-runner
+COPY container-runner-defaults.sh /home/someuser/gitlab-runner/modes/conatiner-runner/etc/defaults.sh
+COPY slurm-baremetal-defaults.sh /home/someuser/gitlab-runner/modes/slurm-baremetal/etc/defaults.sh
 
 RUN cd /home/someuser/gitlab-runner/modes \
   && ln -s container-runner container \
