--- a/zinal/ci.yml
+++ b/zinal/ci.yml
@@ -21,12 +21,12 @@ deploy_tds:
     - podman rmi $DOCKERTAG
     - TOKEN="$(cat $HOME/zinal/gitlab-runner-config-zinal.token)"
     - RUNNER_ID="$(cat $HOME/zinal/gitlab-runner-system_id)"
-    - '[[ -z $TOKEN ]] && echo "Token is empty - this is an error" && exit 1'
-    - '[[ -z $RUNNER_ID ]] && echo "Runner id is empty - this is an error" && exit 1'
+    - 'if [[ -z $TOKEN ]] ; then echo "Token is empty - this is an error" && exit 1 ; fi'
+    - 'if [[ -z $RUNNER_ID ]] ; then echo "Runner id is empty - this is an error" && exit 1 ; fi'
       # nomad job plan returns a non-zero status when there is a change, therefore we must ignore the return value
     - nomad job plan -var image_id=$DOCKERTAG -var "GITLAB_RUNNER_TOKEN=$TOKEN" -var "GITLAB_RUNNER_SYSTEM_ID=$RUNNER_ID" nomad_podman_gitlab-runner.hcl | tee nomad_plan.log || true
     - chmod 600 nomad_plan.log
-    - eval $(grep "nomad job run " nomad_plan.log)
+    - eval $(grep "nomad job run " nomad_plan.log | set -e "s/job run/job run -detach/")
   variables:
     DOCKERTAG: $CI_REGISTRY_IMAGE/cicd-ext-zinal-gitlab-runner:tds-$CI_COMMIT_SHORT_SHA
     HOME: /users/anfink
@@ -34,6 +34,20 @@ deploy_tds:
   artifacts:
     reports:
       dotenv: build.env
+
+promote deploy tds:
+  tags: ["zinal-slurm-baremeta"]
+  stage: deploy_tds
+  needs: [deploy_tds]
+  script:
+    - RETRY_COUNT=0
+    - DEPLOYMENT=$(nomad deployment list | grep podman-ci-ext-gitlab-runner-job | head -n 1 | cut -f1 -d' ')
+    - 'while [[ $RETRY_COUNT -le 15 ]] ; do'
+    - if [[ $(nomad deployment status --json $DEPLOYMENT | jq '.TaskGroups."podman-ci-ext-gitlab-runner-group".HealthyAllocs') -ge 1 ]] ; then nomad deployment promote $DEPLOYMENT ; exit 0 ; fi
+    - let ++RETRY_COUNT
+    - sleep 10
+    - done
+    - exit 1
   # we allow this job to fail, sometimes we do not exit early enough before nomad switches over
   # to the new gitlab-runner, then this job would fail
   # However we have a test in the test tds stage that checks that the correct image is loaded
@@ -43,7 +57,7 @@ deploy_tds:
 test tds container-runner:
   tags: ["zinal-container-runner"]
   stage: test_tds
-  image: docker.io/ubuntu:22.04
+  image: ubuntu:22.04
   script:
     - cat /etc/os-release | grep ubuntu
     # Test that we did not clone the sources
@@ -58,7 +72,7 @@ test tds slurm-baremetal:
   script:
     - cat /etc/os-release | grep sles
     - CURRENT_IMG="$(nomad job inspect podman-ci-ext-gitlab-runner-job | jq --raw-output .Job.TaskGroups[0].Tasks[0].Config.image)"
-    - '[[ $CURRENT_IMG != "$CI_REGISTRY_IMAGE/cicd-ext-zinal-gitlab-runner:tds-$CI_COMMIT_SHORT_SHA" ]] && echo "CURRENT_IMG=$CURRENT_IMG is the wrong image running the gitlab runner" && exit 1'
+    - 'if [[ $CURRENT_IMG != "$CI_REGISTRY_IMAGE/cicd-ext-zinal-gitlab-runner:tds-$CI_COMMIT_SHORT_SHA" ]] ; then echo "CURRENT_IMG=$CURRENT_IMG is the wrong image running the gitlab runner" && exit 1 ; fi'
   variables:
     CSCS_RUN_TDS: 'YES'
 
@@ -87,7 +101,7 @@ deploy prod:
 test container-runner:
   tags: ["zinal-container-runner"]
   stage: test
-  image: docker.io/ubuntu:22.04
+  image: ubuntu:22.04
   script:
     - cat /etc/os-release | grep ubuntu
     # Test that we did not clone the sources
@@ -100,7 +114,7 @@ test slurm-baremetal:
     - cat /etc/os-release | grep sles
     - '[[ -d zinal ]] && echo "Directory zinal found, this is expected because we cloned the sources"'
     - CURRENT_IMG="$(nomad job inspect podman-ci-ext-gitlab-runner-job | jq --raw-output .Job.TaskGroups[0].Tasks[0].Config.image)"
-    - '[[ $CURRENT_IMG != "$CI_REGISTRY_IMAGE/cicd-ext-zinal-gitlab-runner:tds-$CI_COMMIT_SHORT_SHA" ]] && echo "CURRENT_IMG=$CURRENT_IMG is the wrong image running the gitlab runner" && exit 1'
+    - 'if [[ $CURRENT_IMG != "$CI_REGISTRY_IMAGE/cicd-ext-zinal-gitlab-runner:tds-$CI_COMMIT_SHORT_SHA" ]] ; then echo "CURRENT_IMG=$CURRENT_IMG is the wrong image running the gitlab runner" && exit 1 ; fi'
 
 
 revert to previous:
@@ -111,7 +125,7 @@ revert to previous:
     - cd zinal
     - TOKEN="$(cat $HOME/zinal/gitlab-runner-config-zinal.token)"
     - RUNNER_ID="$(cat $HOME/zinal/gitlab-runner-system_id)"
-    - '[[ -z $DOCKERTAG ]] && env && echo "DOCKERTAG is empty, cannot revert" && exit 1'
+    - 'if [[ -z $DOCKERTAG ]] then env && echo "DOCKERTAG is empty, cannot revert" && exit 1 ; fi'
     - nomad job plan -var image_id=$DOCKERTAG -var "GITLAB_RUNNER_TOKEN=$TOKEN" -var "GITLAB_RUNNER_SYSTEM_ID=$RUNNER_ID" nomad_podman_gitlab-runner.hcl | tee nomad_plan.log || true
     - chmod 600 nomad_plan.log
     - eval $(grep "nomad job run " nomad_plan.log)
