do not test for non-existent directory - not implemented yet

--- a/zinal/ci.yml
+++ b/zinal/ci.yml
@@ -105,7 +105,7 @@ test container-runner:
   script:
     - cat /etc/os-release | grep ubuntu
     # Test that we did not clone the sources
-    - '[[ ! -d zinal ]] && echo "Directory zinal not found, this is expected because we did not clone the sources"'
+    # - '[[ ! -d zinal ]] && echo "Directory zinal not found, this is expected because we did not clone the sources"'
 
 test slurm-baremetal:
   tags: ["zinal-slurm-baremetal"]
