--- a/zinal/ci.yml
+++ b/zinal/ci.yml
@@ -91,12 +91,31 @@ deploy prod:
     - RUNNER_ID="$(cat $HOME/zinal/gitlab-runner-system_id)"
     - nomad job plan -var image_id=$DOCKERTAG -var "GITLAB_RUNNER_TOKEN=$TOKEN" -var "GITLAB_RUNNER_SYSTEM_ID=$RUNNER_ID" nomad_podman_gitlab-runner.hcl | tee nomad_plan.log || true
     - chmod 600 nomad_plan.log
-    - eval $(grep "nomad job run " nomad_plan.log)
+    - eval $(grep "nomad job run " nomad_plan.log | sed -e "s/job run/job run -detach/")
   variables:
     DOCKERTAG: $CI_REGISTRY_IMAGE/cicd-ext-zinal-gitlab-runner:$CI_COMMIT_SHORT_SHA
     HOME: /users/anfink
     GIT_SUBMODULE_STRATEGY: recursive
   allow_failure: true # see above statement why this is allowed to fail
+
+promote deploy tds:
+  tags: ["zinal-slurm-baremetal"]
+  stage: deploy
+  needs: ["deploy prod"]
+  script:
+    - RETRY_COUNT=0
+    - DEPLOYMENT=$(nomad deployment list | grep podman-ci-ext-gitlab-runner-job | head -n 1 | cut -f1 -d' ')
+    - 'while [[ $RETRY_COUNT -le 15 ]] ; do'
+    - if [[ $(nomad deployment status --json $DEPLOYMENT | jq '.TaskGroups."podman-ci-ext-gitlab-runner-group".HealthyAllocs') -ge 1 ]] ; then nomad deployment promote -detach $DEPLOYMENT ; exit $? ; fi
+    - let ++RETRY_COUNT
+    - sleep 10
+    - done
+    - exit 1
+  # we allow this job to fail, sometimes we do not exit early enough before nomad switches over
+  # to the new gitlab-runner, then this job would fail
+  # However we have a test in the test tds stage that checks that the correct image is loaded
+  allow_failure: true
+
 
 test container-runner:
   tags: ["zinal-container-runner"]
@@ -114,7 +133,7 @@ test slurm-baremetal:
     - cat /etc/os-release | grep sles
     - '[[ -d zinal ]] && echo "Directory zinal found, this is expected because we cloned the sources"'
     - CURRENT_IMG="$(nomad job inspect podman-ci-ext-gitlab-runner-job | jq --raw-output .Job.TaskGroups[0].Tasks[0].Config.image)"
-    - 'if [[ $CURRENT_IMG != "$CI_REGISTRY_IMAGE/cicd-ext-zinal-gitlab-runner:tds-$CI_COMMIT_SHORT_SHA" ]] ; then echo "CURRENT_IMG=$CURRENT_IMG is the wrong image running the gitlab runner" && exit 1 ; fi'
+    - 'if [[ $CURRENT_IMG != "$CI_REGISTRY_IMAGE/cicd-ext-zinal-gitlab-runner:$CI_COMMIT_SHORT_SHA" ]] ; then echo "CURRENT_IMG=$CURRENT_IMG is the wrong image running the gitlab runner" && exit 1 ; fi'
 
 
 revert to previous:
@@ -131,7 +150,7 @@ revert to previous:
     - eval $(grep "nomad job run " nomad_plan.log | sed -e 's/job run/job run -detach/')
     - sleep 60
     - DEPLOYMENT=$(nomad deployment list | grep podman-ci-ext-gitlab-runner-job | head -n 1 | cut -f1 -d' ')
-    - nomad deployment promote -detach $DEPLOYMENT
+    - 'nomad deployment promote -detach $DEPLOYMENT'
   variables:
     DOCKERTAG: $REVERT_TAG
     HOME: /users/anfink
