--- a/zinal/ci.yml
+++ b/zinal/ci.yml
@@ -14,7 +14,7 @@ deploy_tds:
   script:
     - cd zinal
     - CURRENT_IMG="$(nomad job inspect podman-ci-ext-gitlab-runner-job | jq --raw-output .Job.TaskGroups[0].Tasks[0].Config.image)"
-    - echo "REVERT_TAG=$CURRENT_IMG" >> ../build.env
+    - echo "REVERT_TAG=$CURRENT_IMG" >> revert.env
     - podman login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
     - podman build -f Dockerfile_tds --format docker --build-arg BASEIMG=$CURRENT_IMG -t $DOCKERTAG .
     - podman push $DOCKERTAG
@@ -33,13 +33,14 @@ deploy_tds:
     GIT_SUBMODULE_STRATEGY: recursive
   artifacts:
     reports:
-      dotenv: build.env
+      dotenv: zinal/revert.env
 
 promote deploy tds:
   tags: ["zinal-slurm-baremetal"]
   stage: deploy_tds
   needs: [deploy_tds]
   script:
+    - if [[ -z $REVERT_TAG ]] ; then echo "REVERT_TAG is empty - this is an error, because it is unknown to which version we should revert to. Deployment will not be promoted" && exit 1 ; fi
     - RETRY_COUNT=0
     - DEPLOYMENT=$(nomad deployment list | grep podman-ci-ext-gitlab-runner-job | head -n 1 | cut -f1 -d' ')
     - 'while [[ $RETRY_COUNT -le 15 ]] ; do'
