allow gitlab-runner update in TDS system

--- a/zinal/Dockerfile
+++ b/zinal/Dockerfile
@@ -10,8 +10,9 @@ RUN zypper --non-interactive install \
   && zypper --non-interactive clean -a \
   && rm -Rf /var/log/zypp /var/log/zypper.log
 
+ARG GITLAB_RUNNER_VERSION
 # install gitlab-runner in /usr/local/bin
-RUN curl -L "https://gitlab-runner-downloads.s3.amazonaws.com/v15.8.3/binaries/gitlab-runner-linux-amd64" > /usr/local/bin/gitlab-runner \
+RUN curl -L "https://gitlab-runner-downloads.s3.amazonaws.com/$GITLAB_RUNNER_VERSION/binaries/gitlab-runner-linux-amd64" > /usr/local/bin/gitlab-runner \
   && chmod +x /usr/local/bin/gitlab-runner
 
 # copy the runners into the container
