--- a/zinal/Dockerfile_tds
+++ b/zinal/Dockerfile_tds
@@ -1,6 +1,12 @@
 ARG BASEIMG
 FROM $BASEIMG
 
+ARG GITLAB_RUNNER_VERSION
+# install gitlab-runner in /usr/local/bin
+RUN curl -L "https://gitlab-runner-downloads.s3.amazonaws.com/$GITLAB_RUNNER_VERSION/binaries/gitlab-runner-linux-amd64" > /usr/local/bin/gitlab-runner \
+  && chmod +x /usr/local/bin/gitlab-runner
+
+
 COPY gitlab-runner-multimode /home/someuser/gitlab-runner/tds
 COPY container-runner-defaults.sh /home/someuser/gitlab-runner/tds/modes/container-runner/etc/defaults.sh
 COPY slurm-baremetal-defaults.sh /home/someuser/gitlab-runner/tds/modes/slurm-baremetal/etc/defaults.sh
