--- a/zinal/ci.yml
+++ b/zinal/ci.yml
@@ -8,6 +8,9 @@ stages:
   - test
   - revert
 
+variables:
+  GITLAB_RUNNER_VERSION: "v15.8.3"
+
 deploy_tds:
   tags: ["zinal-slurm-baremetal"]
   stage: deploy_tds
@@ -16,7 +19,7 @@ deploy_tds:
     - CURRENT_IMG="$(nomad job inspect podman-ci-ext-gitlab-runner-job | jq --raw-output .Job.TaskGroups[0].Tasks[0].Config.image)"
     - echo "REVERT_TAG=$CURRENT_IMG" >> revert.env
     - podman login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-    - podman build -f Dockerfile_tds --format docker --build-arg BASEIMG=$CURRENT_IMG -t $DOCKERTAG .
+    - podman build -f Dockerfile_tds --format docker --build-arg BASEIMG=$CURRENT_IMG --build-arg GITLAB_RUNNER_VERSION=$GITLAB_RUNNER_VERSION -t $DOCKERTAG .
     - podman push $DOCKERTAG
     - podman rmi $DOCKERTAG
     - TOKEN="$(cat $HOME/zinal/gitlab-runner-config-zinal.token)"
@@ -44,7 +47,7 @@ promote deploy tds:
     - RETRY_COUNT=0
     - DEPLOYMENT=$(nomad deployment list | grep podman-ci-ext-gitlab-runner-job | head -n 1 | cut -f1 -d' ')
     - 'while [[ $RETRY_COUNT -le 15 ]] ; do'
-    - if [[ $(nomad deployment status --json $DEPLOYMENT | jq '.TaskGroups."podman-ci-ext-gitlab-runner-group".HealthyAllocs') -ge 1 ]] ; then nomad deployment promote -detach $DEPLOYMENT ; exit $? ; fi
+    - if [[ $(nomad deployment status --json $DEPLOYMENT | jq '.TaskGroups."podman-ci-ext-gitlab-runner-group".HealthyAllocs') -ge 1 ]] ; then nomad deployment promote $DEPLOYMENT ; exit $? ; fi
     - let ++RETRY_COUNT
     - sleep 10
     - done
@@ -85,7 +88,7 @@ deploy prod:
   stage: deploy
   script:
     - cd zinal
-    - podman build -f Dockerfile --format docker -t $DOCKERTAG --build-arg GROUP_ID=$(id -g) --build-arg USER_ID=$(id -u) .
+    - podman build -f Dockerfile --format docker -t $DOCKERTAG --build-arg GROUP_ID=$(id -g) --build-arg USER_ID=$(id -u) --build-arg GITLAB_RUNNER_VERSION=$GITLAB_RUNNER_VERSION .
     - podman login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
     - podman push $DOCKERTAG
     - podman rmi $DOCKERTAG
@@ -107,7 +110,7 @@ promote deploy prod:
     - RETRY_COUNT=0
     - DEPLOYMENT=$(nomad deployment list | grep podman-ci-ext-gitlab-runner-job | head -n 1 | cut -f1 -d' ')
     - 'while [[ $RETRY_COUNT -le 15 ]] ; do'
-    - if [[ $(nomad deployment status --json $DEPLOYMENT | jq '.TaskGroups."podman-ci-ext-gitlab-runner-group".HealthyAllocs') -ge 1 ]] ; then nomad deployment promote -detach $DEPLOYMENT ; exit $? ; fi
+    - if [[ $(nomad deployment status --json $DEPLOYMENT | jq '.TaskGroups."podman-ci-ext-gitlab-runner-group".HealthyAllocs') -ge 1 ]] ; then nomad deployment promote $DEPLOYMENT ; exit $? ; fi
     - let ++RETRY_COUNT
     - sleep 10
     - done
@@ -151,7 +154,7 @@ revert to previous:
     - eval $(grep "nomad job run " nomad_plan.log | sed -e 's/job run/job run -detach/')
     - sleep 60
     - DEPLOYMENT=$(nomad deployment list | grep podman-ci-ext-gitlab-runner-job | head -n 1 | cut -f1 -d' ')
-    - 'nomad deployment promote -detach $DEPLOYMENT'
+    - 'nomad deployment promote $DEPLOYMENT'
   variables:
     DOCKERTAG: $REVERT_TAG
     HOME: /users/anfink
