--- a/zinal/deploy.yml
+++ b/zinal/deploy.yml
@@ -3,7 +3,7 @@
   script:
     - cd zinal
       # clear podman caches and images
-      podman system prune -af
+    - podman system prune -af
     - podman login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
     - podman build -f $DOCKERFILE --format docker --build-arg GITLAB_RUNNER_VERSION=$GITLAB_RUNNER_VERSION $BUILDARGS -t $DOCKERTAG .
     - podman push $DOCKERTAG
