--- a/zinal/ci.yml
+++ b/zinal/ci.yml
@@ -17,13 +17,13 @@ deploy_tds:
   before_script:
     - export CURRENT_IMG="$(nomad job inspect podman-ci-ext-gitlab-runner-job | jq --raw-output .Job.TaskGroups[0].Tasks[0].Config.image)"
     - echo "REVERT_TAG=$CURRENT_IMG" >> revert.env
+    - BUILDARGS="--build-arg BASEIMG=$CURRENT_IMG"
   variables:
     DOCKERFILE: Dockerfile_tds
     DOCKERTAG: $CI_REGISTRY_IMAGE/cicd-ext-zinal-gitlab-runner:tds-$CI_COMMIT_SHORT_SHA
-    BUILDARGS: --build-arg BASEIMG=$CURRENT_IMG
   artifacts:
     reports:
-      dotenv: zinal/revert.env
+      dotenv: revert.env
 
 promote deploy_tds:
   extends: .deploy-promote
