--- a/zinal/deploy.yml
+++ b/zinal/deploy.yml
@@ -1,14 +1,13 @@
 .deploy:
   tags: ["zinal-slurm-baremetal"]
   script:
-    - set -x
     - cd zinal
       # clear podman caches and images
     - podman system prune -af
     - podman login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
     - podman build -f $DOCKERFILE --format docker --build-arg GITLAB_RUNNER_VERSION=$GITLAB_RUNNER_VERSION $BUILDARGS -t $DOCKERTAG .
     - podman push $DOCKERTAG
-      podman logout $CI_REGISTRY
+    - podman logout $CI_REGISTRY
     - podman rmi $DOCKERTAG
     - TOKEN="$(cat $HOME/zinal/gitlab-runner-config-zinal.token)"
     - RUNNER_ID="$(cat $HOME/zinal/gitlab-runner-system_id)"
