revert removal of HOME, runner must first exist, before we can remove it

--- a/zinal/ci.yml
+++ b/zinal/ci.yml
@@ -85,4 +85,5 @@ revert to previous:
     - 'nomad deployment promote -detach $DEPLOYMENT'
   variables:
     DOCKERTAG: $REVERT_TAG
+    HOME: /users/anfink
   allow_failure: true
