--- a/santis/ci.yml
+++ b/santis/ci.yml
@@ -10,7 +10,7 @@ build container:
   script:
     - cd santis
     - podman login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-    - podman build -f $DOCKERFILE --format docker --build-arg GITLAB_RUNNER_VERSION=$GITLAB_RUNNER_VERSION --build-arg GITLAB_RUNNER_ARCH=$GITLAB_RUNNER_ARCH --build-arg USER_ID=$USER_ID --build-arg GROUP_ID=$GROUP_ID -t $DOCKERTAG .
+    - podman build --isolation=chroot -f $DOCKERFILE --format docker --build-arg GITLAB_RUNNER_VERSION=$GITLAB_RUNNER_VERSION --build-arg GITLAB_RUNNER_ARCH=$GITLAB_RUNNER_ARCH --build-arg USER_ID=$USER_ID --build-arg GROUP_ID=$GROUP_ID -t $DOCKERTAG .
     - podman push $DOCKERTAG
   variables:
     DEPLOYMENT_VERSION: '0.1'
