--- a/santis/ci.yml
+++ b/santis/ci.yml
@@ -13,7 +13,8 @@ build container:
     - podman build --isolation=chroot -f $DOCKERFILE --format docker --build-arg GITLAB_RUNNER_VERSION=$GITLAB_RUNNER_VERSION --build-arg GITLAB_RUNNER_ARCH=$GITLAB_RUNNER_ARCH --build-arg USER_ID=$USER_ID --build-arg GROUP_ID=$GROUP_ID -t $DOCKERTAG .
     - podman push $DOCKERTAG
   variables:
-    DEPLOYMENT_VERSION: '0.2'
+    GIT_SUBMODULE_STRATEGY: recursive
+    DEPLOYMENT_VERSION: '0.3'
     DOCKERFILE: Dockerfile.container_build
     DOCKERTAG: $CI_REGISTRY_IMAGE/cicd-ext-$CI_COMMIT_REF_SLUG-gitlab-runner:$DEPLOYMENT_VERSION
     GITLAB_RUNNER_VERSION: "v16.7.0"
