--- a/santis/ci.yml
+++ b/santis/ci.yml
@@ -5,19 +5,19 @@ stages:
   - build_container
 
 build container:
-  extends: .container-builder
+  tags: [docker_jfrog]
   stage: build_container
   script:
     - cd santis
     - podman login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-    - podman build --isolation=chroot -f $DOCKERFILE --format docker --build-arg GITLAB_RUNNER_VERSION=$GITLAB_RUNNER_VERSION --build-arg GITLAB_RUNNER_ARCH=$GITLAB_RUNNER_ARCH --build-arg USER_ID=$USER_ID --build-arg GROUP_ID=$GROUP_ID -t $DOCKERTAG .
-    - podman push $DOCKERTAG
+    - podman manifest create $DOCKERTAG
+    - podman build --platform linux/amd64,linux/aarch64 --manifest $DOCKERTAG --isolation=chroot -f $DOCKERFILE --format docker --build-arg GITLAB_RUNNER_VERSION=$GITLAB_RUNNER_VERSION --build-arg USER_ID=$USER_ID --build-arg GROUP_ID=$GROUP_ID .
+    - podman manifest push $DOCKERTAG docker://$DOCKERTAG
   variables:
     GIT_SUBMODULE_STRATEGY: recursive
-    DEPLOYMENT_VERSION: '0.12'
+    DEPLOYMENT_VERSION: '0.13'
     DOCKERFILE: Dockerfile.container_build
     DOCKERTAG: $CI_REGISTRY_IMAGE/cicd-ext-$CI_COMMIT_REF_SLUG-gitlab-runner:$DEPLOYMENT_VERSION
     GITLAB_RUNNER_VERSION: "v16.7.0"
-    GITLAB_RUNNER_ARCH: "amd64"
     USER_ID: '25014'
     GROUP_ID: '31774'
