--- a/santis/ci.yml
+++ b/santis/ci.yml
@@ -3,21 +3,34 @@ include:
 
 stages:
   - build_container
+  - make_multiarch
 
-build container:
-  tags: [docker_jfrog]
+variables:
+    DEPLOYMENT_VERSION: '0.14'
+
+.build-container:
   stage: build_container
   script:
     - cd santis
-    - podman login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-    - podman manifest create $DOCKERTAG
-    - podman build --platform linux/amd64,linux/aarch64 --manifest $DOCKERTAG --isolation=chroot -f $DOCKERFILE --format docker --build-arg GITLAB_RUNNER_VERSION=$GITLAB_RUNNER_VERSION --build-arg USER_ID=$USER_ID --build-arg GROUP_ID=$GROUP_ID .
-    - podman manifest push $DOCKERTAG docker://$DOCKERTAG
+    - build_new_container
   variables:
     GIT_SUBMODULE_STRATEGY: recursive
-    DEPLOYMENT_VERSION: '0.14'
-    DOCKERFILE: Dockerfile.container_build
-    DOCKERTAG: $CI_REGISTRY_IMAGE/cicd-ext-$CI_COMMIT_REF_SLUG-gitlab-runner:$DEPLOYMENT_VERSION
     GITLAB_RUNNER_VERSION: "v16.7.0"
     USER_ID: '25014'
     GROUP_ID: '31774'
+    DOCKERFILE: Dockerfile.container_build
+    PERSIST_IMAGE_NAME: $CI_REGISTRY_IMAGE/cicd-ext-$CI_COMMIT_REF_SLUG-gitlab-runner:$DEPLOYMENT_VERSION-${ARCH}
+    DOCKER_BUILD_ARGS: '["GITLAB_RUNNER_VERSION=$GITLAB_RUNNER_VERSION", "USER_ID=$USER_ID", "GROUP_ID=$GROUP_ID"]'
+build aarch64:
+  extends: [.container-builder-cscs-gh200, .build-container]
+build x86_64:
+  extends: [.container-builder-cscs-zen2, .build-container]
+
+make multiarch:
+  extends: .make-multiarch-image
+  stage: make_multiarch
+  variables:
+    PERSIST_IMAGE_NAME: $CI_REGISTRY_IMAGE/cicd-ext-$CI_COMMIT_REF_SLUG-gitlab-runner:$DEPLOYMENT_VERSION
+    PERSIST_IMAGE_NAME_AARCH64: $CI_REGISTRY_IMAGE/cicd-ext-$CI_COMMIT_REF_SLUG-gitlab-runner:$DEPLOYMENT_VERSION-aarch64
+    PERSIST_IMAGE_NAME_X86_64: $CI_REGISTRY_IMAGE/cicd-ext-$CI_COMMIT_REF_SLUG-gitlab-runner:$DEPLOYMENT_VERSION-x86_64
+
