--- a/santis/ci.yml
+++ b/santis/ci.yml
@@ -13,7 +13,7 @@ variables:
   script:
     - cd santis
     - podman login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-    - podman build --isolation=chroot -f $CI_PROJECT_DIR/$DOCKERFILE -t $PERSIST_IMGE_NAME --build-arg GITLAB_RUNNER_VERSION=$GITLAB_RUNNER_VERSION --build-arg USER_ID=$USER_ID --build-arg GROUP_ID=$GROUP_ID .
+    - podman build --isolation=chroot --format=docker -f $CI_PROJECT_DIR/$DOCKERFILE -t $PERSIST_IMAGE_NAME --build-arg GITLAB_RUNNER_VERSION=$GITLAB_RUNNER_VERSION --build-arg USER_ID=$USER_ID --build-arg GROUP_ID=$GROUP_ID .
     - podman push $PERSIST_IMAGE_NAME
   variables:
     GIT_SUBMODULE_STRATEGY: recursive
