--- a/santis/ci.yml
+++ b/santis/ci.yml
@@ -29,8 +29,15 @@ build x86_64:
   extends: [.container-builder-cscs-zen2, .build-container]
 
 make multiarch:
-  extends: .make-multiarch-image
+  tags: [rosa-k8s]
+  image: docker.io/finkandreas/cicd-ext-k8s-container-image-builder:podman-4.9.0
   stage: make_multiarch
+  script:
+    - podman login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+    - podman manifest create $PERSIST_IMAGE_NAME
+    - podman manifest add $PERSIST_IMAGE_NAME docker://$PERSIST_IMAGE_NAME_AARCH64
+    - podman manifest add $PERSIST_IMAGE_NAME docker://$PERSIST_IMAGE_NAME_X86_64
+    - podman manifest push --all $PERSIST_IMAGE_NAME docker://$PERSIST_IMAGE_NAME
   variables:
     PERSIST_IMAGE_NAME: $CI_REGISTRY_IMAGE/cicd-ext-$CI_COMMIT_REF_SLUG-gitlab-runner:$DEPLOYMENT_VERSION
     PERSIST_IMAGE_NAME_AARCH64: $CI_REGISTRY_IMAGE/cicd-ext-$CI_COMMIT_REF_SLUG-gitlab-runner:$DEPLOYMENT_VERSION-aarch64
